docs-archive/apache-airflow-providers-cohere/1.2.0/_sources/_api/airflow/providers/cohere/hooks/cohere/index.rst.txt
:py:mod:`airflow.providers.cohere.hooks.cohere`
===============================================

.. py:module:: airflow.providers.cohere.hooks.cohere


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.cohere.hooks.cohere.CohereHook




.. py:class:: CohereHook(conn_id = default_conn_name, timeout = None, max_retries = None, **kwargs)


   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Use Cohere Python SDK to interact with Cohere platform.

   .. seealso:: https://docs.cohere.com/docs

   :param conn_id: :ref:`Cohere connection id <howto/connection:cohere>`
   :param timeout: Request timeout in seconds.
   :param max_retries: Maximal number of retries for requests.

   .. py:attribute:: conn_name_attr
      :value: 'conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'cohere_default'

      

   .. py:attribute:: conn_type
      :value: 'cohere'

      

   .. py:attribute:: hook_name
      :value: 'Cohere'

      

   .. py:method:: get_conn()

      Return connection for the hook.


   .. py:method:: create_embeddings(texts, model = 'embed-multilingual-v2.0')


   .. py:method:: get_ui_field_behaviour()
      :classmethod:


   .. py:method:: test_connection()



